user 아이디 패스워드 암호화 및 등록 로그인 확인

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,6 +7,7 @@
 <body>
     <h3>
         Message : <span th:text="${#httpServletRequest.getAttribute('javax.servlet.error.message')}"></span>
+        Message : <span th:text="${#httpServletRequest.getAttribute('javax.servlet.error.exception')}"></span>
         Code : <span th:text="${#httpServletRequest.getAttribute('javax.servlet.error.status_code')}"></span>
     </h3>
 <a href="/" th:href="@{/}">Back to Home Page</a>
