--- a/src/main/resources/templates/regist.html
+++ b/src/main/resources/templates/regist.html
@@ -7,6 +7,7 @@
                   class="js-validate w-lg-75 px-3 px-sm-9 mx-lg-auto form-signin"
                   th:object="${user}">
                 <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                <input type="hidden" id="role" th:name="role" th:value="USER">
                 <!-- Title -->
                 <div class="w-md-80 w-lg-60 text-center mx-md-auto mb-5">
                     <span class="u-label u-label--sm u-label--purple mb-3">join us</span>
@@ -18,18 +19,19 @@
                     <div class="form-group col-md-5 js-form-message">
                         <label class="h6 small d-block text-uppercase">아이디<span class="text-danger">*</span></label>
                         <div class="js-focus-state input-group form">
-                            <input type="text" class="form-control form__input" required
-                                   th:field="*{userId}"
-                                   placeholder="ID"
-                                   aria-label="userId"
-                                   data-msg="필수입력"
-                                   data-error-class="u-has-error"
-                                   data-success-class="u-has-success"
-                            />
-                            <div class="input-group-append">
-                                <button class="btn" type="button">아이디체크</button>
-                            </div>
+                        <input type="text" class="form-control form__input" required
+                               th:field="*{userId}"
+                               placeholder="ID"
+                               aria-label="userId"
+                               data-msg="필수입력"
+                               data-error-class="u-has-error"
+                               data-success-class="u-has-success"
+                        />
+                        <!-- TODO 아이디체크 우찌할건지-->
+                        <div class="input-group-append">
+                            <button class="btn" type="button">아이디체크</button>
                         </div>
+                    </div>
                     </div>
                 </div>
                 <div class="form-row mb-3">
@@ -70,6 +72,7 @@
                                    data-success-class="u-has-success"/>
                         </div>
                     </div>
+                    <!--TODO :  핸드폰 validation할건지 인증할건지??-->
                     <div class="form-group col-md-6 js-form-message">
                         <label class="h6 small d-block text-uppercase">핸드폰<span class="text-danger">*</span></label>
                         <div class="js-focus-state input-group form">
@@ -97,27 +100,36 @@
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-md-5 ">
-                        <label class="h6 small d-block text-uppercase" for="postNum">우편번호</label>
+                    <!--<div class="form-group col-md-5 ">
+                        <label class="h6 small d-block text-uppercase" for="sample3_postcode">우편번호</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" id="postNum" th:field="*{postNum}" />
+                            <input type="text" class="form-control" id="sample3_postcode" th:field="*{postNum}" />
                             <div class="input-group-append">
                                 <button class="btn" type="button">주소검색</button>
                             </div>
                         </div>
+                    </div>-->
+                </div>
+                <div class="form-group">
+                    <label class="h6 small d-block text-uppercase" for="addr">주소</label>
+                    <div>
+                        <div id="addrWrap" class="position-absolute" style="display:none; border:1px solid #d4d7dd; height:400px;">
+                            <img src="//t1.daumcdn.net/postcode/resource/images/close.png" id="btnFoldWrap" style="cursor:pointer;position:absolute;right:0px;top:-1px;z-index:1" onclick="foldDaumPostcode()" alt="접기 버튼">
+                        </div>
+                        <input id="addr" type="text" class="form-control form__input" th:field="*{address}"
+                               placeholder="건물명,도로명,지번으로 검색하세요"
+                               aria-label="Default example with button"
+                               aria-describedby="inputGroup-sizing-default"
+                        >
+                        <input type="hidden" id="postNum" name="postNum">
+                        <input type="hidden" id="logitude" th:field="*{logitude}">
+                        <input type="hidden" id="latitude" th:field="*{latitude}">
                     </div>
+                    <!--<input type="text" class="form-control" id="sample3_address" th:field="*{address}" />-->
                 </div>
                 <div class="form-group">
-                    <label class="h6 small d-block text-uppercase" for="inputAddress">구주소</label>
-                    <input type="text" class="form-control" id="inputAddress" th:field="*{address}" />
-                </div>
-                <div class="form-group">
-                    <label class="h6 small d-block text-uppercase" for="roadAddress">도로명</label>
-                    <input type="text" class="form-control" id="roadAddress" th:field="*{roadAddress}" />
-                </div>
-                <div class="form-group">
-                    <label class="h6 small d-block text-uppercase" for="inputAddress2">상세주소</label>
-                    <input type="text" class="form-control" id="inputAddress2" th:field="*{detailAddress}" />
+                    <label class="h6 small d-block text-uppercase" for="sample3_detailAddress">상세주소</label>
+                    <input type="text" class="form-control" id="sample3_detailAddress" th:field="*{detailAddress}" />
                 </div>
                 <input type="submit" class="btn btn-primary" value="Sign in"/>
             </form>
@@ -141,12 +153,90 @@
         </div>
         <!-- End Successful Notification Section -->
 
+        <script th:inline="javascript" type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=af40a347c5a17c5118392cee56f35da6&libraries=services"></script>
+        <script th:inline="javascript" type="text/javascript" src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
         <script th:inline="javascript">
             /*<![CDATA[*/
             $(document).on('ready', function () {
                 // initialization of form validation
                 $.HSCore.components.HSValidation.init('.js-validate');
+
+                $("#addr").focus(function (obj) {
+                    $("#addr").css("zIndex","-1");
+                    sample3_execDaumPostcode();
+                    //$( "#target" ).focus();
+                    obj.target.blur();
+                });
+
+                $("#addr").keyup(function() {
+                    //Assigning search box value to javascript variable named as "name".
+                    var name = $('#search').val();
+                });
             });
+
+            // 우편번호 찾기 찾기 화면을 넣을 element
+            var element_wrap = document.getElementById('addrWrap');
+
+            function foldDaumPostcode() {
+                // iframe을 넣은 element를 안보이게 한다.
+                element_wrap.style.display = 'none';
+                $("#addr").css("zIndex","");
+            }
+
+            function sample3_execDaumPostcode() {
+                // 현재 scroll 위치를 저장해놓는다.
+                var currentScroll = Math.max(document.body.scrollTop, document.documentElement.scrollTop);
+                var width = document.getElementById('addr').clientWidth;
+                new daum.Postcode({
+                    oncomplete: function(data) {
+                        // 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                        // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                        // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                        var addr = ''; // 주소 변수
+                        var extraAddr = ''; // 참고항목 변수
+
+                        //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                        if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                            addr = data.roadAddress;
+                        } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                            addr = data.jibunAddress;
+                        }
+
+                        // 주소로 좌표를 검색합니다
+                        var geocoder = new daum.maps.services.Geocoder();
+                        geocoder.addressSearch(addr, function(result, status) {
+                            // 정상적으로 검색이 완료됐으면
+                            if (status === daum.maps.services.Status.OK) {
+                                document.getElementById("logitude").value = result[0].y;
+                                document.getElementById("latitude").value = result[0].x;
+                            }
+                        });
+
+                        // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                        document.getElementById('postNum').value = data.zonecode;
+                        document.getElementById("addr").value = addr;
+
+                        // iframe을 넣은 element를 안보이게 한다.
+                        // (autoClose:false 기능을 이용한다면, 아래 코드를 제거해야 화면에서 사라지지 않는다.)
+                        element_wrap.style.display = 'none';
+
+                        // 우편번호 찾기 화면이 보이기 이전으로 scroll 위치를 되돌린다.
+                        document.body.scrollTop = currentScroll;
+                        $("#addr").css("zIndex","");
+
+                    },
+                    hideMapBtn : true,
+                    hideEngBtn : true,
+                    zonecodeOnly : true,
+                    width : width,
+                    height : '100%'
+                }).embed(element_wrap);
+
+                // iframe을 넣은 element를 보이게 한다.
+                element_wrap.style.display = 'block';
+            }
+
             /*]]>*/
         </script>
     </section>
